@@ -44,6 +44,11 @@
 #endif
 @EINA_CONFIGURE_HAVE_STDINT_H@
 
+#ifdef EINA_HAVE_THREADS
+# undef EINA_HAVE_THREADS
+#endif
+@EINA_CONFIGURE_HAVE_THREADS@
+
 #ifdef EINA_SIZEOF_WCHAR_T
 # undef EINA_SIZEOF_WCHAR_T
 #endif
